<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="banner_ad_unit_id">ca-app-pub-5128030113421264/6069026832</string>

    <string name="app_name">LoL eSports</string>
    <string name="action_settings">Settings</string>

    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="font_roboto_bold_condensed">RobotoCondensed-Bold.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_light_condensed">RobotoCondensed-Light.ttf</string>
    <string name="font_roboto_medium">Roboto-Medium.ttf</string>
    <string name="font_roboto_medium_condensed">RobotoCondensed-Regular.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="font_roboto_regular_condensed">RobotoCondensed-Regular.ttf</string>
    <string name="font_roboto_thin">Roboto-Thin.ttf</string>
    <string name="font_gothic_bold">Trade-Gothic-Bold.ttf</string>
    <string name="font_gothic_regular">Trade-Gothic-Regular.ttf</string>

    <string name="image_description_team_logo">team logo</string>
    <string name="image_description_expand_collapse_icon">expand and collapse icon</string>
    <string name="image_description_tweet_avatar">tweet avatar</string>
    <string name="image_description_twitter_icon">Twitter Icon</string>

    <string name="no_results">No Results</string>

    <string name="drawer_header_menu">Menu</string>

    <string name="item_overview_L">L</string>
    <string name="item_overview_W">W</string>
    <string name="item_match_details_vs">vs</string>

    <string name="liveticker_dragon">DRAGON</string>
    <string name="liveticker_baron">BARON</string>
    <string name="liveticker_team_fight">TEAMFIGHT</string>
    <string name="liveticker_kill">KILL</string>
    <string name="liveticker_tower">TOWER</string>
    <string name="liveticker_inhibitor">INHIBITOR</string>
    <string name="liveticker_buff">BUFF</string>
    <string name="liveticker_nexus">NEXUS</string>
    <string name="liveticker_first_blood">FIRST_BLOOD</string>
    <string name="liveticker_scores">SCORES</string>
    <string name="liveticker_matchup">MATCHUP</string>
    <string name="liveticker_colon">:</string>
    <string name="liveticker_pick_bans">PICKS &amp; BANS</string>
    <string name="live_ticker_no_live_events">No Live Events at the moment</string>
    <string name="vs">vs</string>

    <string name="live_streaming_live">Live</string>
    <string name="live_streaming_no_events_found">No Live Streams Available</string>
    <string name="live_streaming_error_starting_stream">
        An error occurred trying to start your video, I don\'t know what to tell you…It was there,
        I saw it too. ¯\\(°_o)/¯
    </string>

    <string name="news_actionbar_title">News</string>

    <string name="overview_actionbar_title">Overview</string>
    <string name="overview_top">TOP</string>
    <string name="overview_teams">TEAMS</string>
    <string name="overview_latest">LATEST</string>
    <string name="overview_results">RESULTS</string>
    <string name="overview_upcoming">UPCOMING</string>
    <string name="overview_matches">MATCHES</string>

    <string name="Replays">Replays</string>
    <string name="replay_views">views</string>

    <string name="schedule_actionbar_title">Schedule</string>
    <string name="standings_actiobar_title">Standings</string>

    <string name="team_roster_pro">PRO</string>
    <string name="team_roster_players">PLAYERS</string>

    <string-array name="team_fragment_titles">
        <item>Roster</item>
        <item>About</item>
        <item>Social</item>
    </string-array>

    <string name="purchase_error">An error occurred…I don\'t know what to tell you…It was there,
        I saw it too. ¯\\(°_o)/¯
    </string>

</resources>
