<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    >

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:paddingLeft="8dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        tools:text="1"
        oak:oakFont="@string/font_roboto_thin"
        />

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_toRightOf="@id/item_overview_position"
        android:layout_toLeftOf="@+id/item_overview_wins"
        tools:text="Alliance"
        oak:oakFont="@string/font_roboto_regular"
        />

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_L"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="4dp"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:text="@string/item_overview_L"
        oak:oakFont="@string/font_roboto_thin"
        />

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/item_overview_L"
        tools:text="4"
        oak:oakFont="@string/font_roboto_thin"
        />

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_W"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/item_overview_losses"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:textColor="@color/green"
        android:text="@string/item_overview_W"
        oak:oakFont="@string/font_roboto_thin"
        />

    <oak.widget.TextViewWithFont
        android:id="@+id/item_overview_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/item_overview_W"
        tools:text="14"
        oak:oakFont="@string/font_roboto_thin"
        />

    <View
        android:id="@+id/item_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_below="@id/item_overview_position"
        />

</RelativeLayout>