<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <oak.widget.TextViewWithFont
        android:id="@+id/action_bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:gravity="center"
        oak:oakFont="@string/font_gothic_regular"
        tools:text="Overview"
        tools:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/action_bar_match_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <oak.widget.TextViewWithFont
            android:id="@+id/action_bar_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gold"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/vs"
            oak:oakFont="@string/font_gothic_bold"
            />

        <oak.widget.TextViewWithFont
            android:id="@+id/action_bar_team_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/action_bar_vs"
            android:gravity="right"
            android:singleLine="true"
            android:ellipsize="end"
            tools:text="Counter Logic Gaming"
            oak:oakFont="@string/font_gothic_regular"
            />

        <oak.widget.TextViewWithFont
            android:id="@+id/action_bar_team_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/action_bar_vs"
            android:gravity="left"
            android:singleLine="true"
            android:ellipsize="end"
            tools:text="Curse"
            oak:oakFont="@string/font_gothic_regular"
            />
    </RelativeLayout>

</RelativeLayout>